Modified layout issue

--- a/source/stylesheets/_program.sass
+++ b/source/stylesheets/_program.sass
@@ -163,7 +163,7 @@
               grid-template-rows: 50px
 
           .agenda
-            padding: 20px
+            padding: 20px 10px
 
             /** Lightning-talk Registeration BTN**/
             .lightning-talk
